# x10

./: .agentic.json  .gitignore  .mempalaceignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  opencode.json
.agent/prompts/: a11y-fix.md  add-migration.md  backend-project-full-cycle.md  bundle-analyze.md  code-review-workflow.md  create-endpoint.md  debug-issue-fullstack.md  debug-issue.md  develop-epic.md  develop-feature-fullstack.md  develop-feature.md  development-cycle-workflow.md  feature-implementation-flow.md  project-setup-workflow.md  refactor-module.md  release-prep.md  scaffold-component.md  test-feature.md  testing-ci-pipeline.md  visual-regression.md
.agent/rules/: accessibility.md  api-design-guide.md  backend-architecture-rule.md  background-jobs-guide.md  code-style-guide.md  data_access.md  database-access-guide.md  database-migrations-guide.md  domain-models-guide.md  env-settings-guide.md  git-workflow-guide.md  github-workflow-guide.md  gitlab-ci-guide.md  lint-format-guide.md  logging-observability-guide.md  makefile-guide.md  performance.md  project-guide.md  python-venv-guide.md  quality.md  readme-sync-guide.md  sdlc-role-responsibilities.md  security-guide.md  security.md
.agent/workflows/: a11y-fix.md  add-migration.md  backend-project-full-cycle.md  bundle-analyze.md  create-endpoint.md  debug-issue-fullstack.md  debug-issue.md  develop-epic.md  develop-feature.md  development-cycle-workflow.md  feature-implementation-flow.md  refactor-module.md  scaffold-component.md  testing-ci-pipeline.md
.codex/: AGENTS.override.md  config.toml
.codex/agents/: designer.toml  developer.toml  (+7 more)
.opencode/: AGENTS.md  MEMORY.md  opencode.json
docs/: frontend-audit.md
migrations/: 0001_init.sql  0001_v2_schema.sql
scripts/: capture_admin_walkthrough.mjs  pngs_to_gif.py
src/: config.rs  lib.rs  main.rs
web/: build.sh  index.html  package-lock.json  package.json  test.sh  vite.config.js
x10-codex-playbook-ru/: 01-frontend-architecture.md  02-coding-rules.md  PROGRESS.md  README.md  api-reference.md
(+279 files in other folders)
