[package]
name = "x10-backend"
version = "0.2.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
rusqlite = { version = "0.37.0", features = ["bundled", "chrono", "uuid"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.23.0"
